<resources>
    <string name="ap_name">DangNhap</string>
    <string name="username">Username</string>
    <string name="lgin">Login</string>
    <string name="register">Register here</string>
    <string name="nameCopyRight">Phan Văn Tuấn</string>
    <string name="masv">1811505310250</string>
    <string name="sign_up">sign up</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>

        <string name="app_name">Login and SignUp ScreenDesign Demo</string>
        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="email">Email Id</string>
        <string name="passowrd">Password</string>
        <string name="login">LOGIN</string>
        <string name="show_pwd">Show Password</string>
        <string name="hide_pwd">Hide Password</string>
        <string name="forgot">Forgot password?</string>
        <string name="closebutton">Close Button for Activity</string>
        <string name="newUser">Not a Member yet? Sign Up here.</string>
        <string name="fullName">Full Name</string>
        <string name="mobileNumber">Mobile Number</string>
        <string name="location">Location</string>
        <string name="confirmPassword">Confirm Password</string>
        <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
        <string name="signUp">SIGN UP</string>
        <string name="already_user">Already have Account? Login here.</string>
        <string name="registered_emailid">Please enter your Registered Email Id below:</string>
        <string name="submit">SUBMIT</string>
        <string name="back">BACK</string>
    <string name="signup">SIGN UP</string>
    <string name="usename">User Name</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="recordpassword">Record password</string>
    <string name="create">CREATE</string>
</resources>