<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#75A7CF">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameCopyRight"/>
    <TextView
        android:id="@+id/msv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masv"
        android:layout_below="@id/ten"
        />

    <ImageView
        android:id="@+id/logo_anh"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_below="@id/logo_anh"
        android:background="#F4EAE9"
        android:textSize="16sp"
        android:drawableStart="@drawable/icon_user"
        android:autofillHints=""/>
    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:inputType="textPersonName"
        android:layout_below="@id/name"
        android:background="#F4EAE9"
        android:hint="@string/password"
        android:textSize="16sp"
        android:layout_alignStart="@id/name"
        android:drawableStart="@drawable/pas2"
        android:autofillHints=""/>
    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/pass"
        android:background="#ff0"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                android:text="@string/lgin"
                android:textSize="25sp"
                android:layout_centerInParent="true"
                android:textColor="#2743DD"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_below="@id/login"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="#1230D6"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/here"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgk_bt"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:text="@string/sign_up"
        android:textColor="#2743DD"
        android:textSize="25sp" />
</RelativeLayout>
</ScrollView>